; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_base.c_base_alloc_extent.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_base.c_base_alloc_extent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CACHELINE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @base_alloc_extent(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i32, i32* @CACHELINE, align 4
  %11 = call i32* @base_alloc_impl(i32* %8, i32* %9, i32 4, i32 %10, i64* %6)
  store i32* %11, i32** %7, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %14, label %15

14:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %20

15:                                               ; preds = %2
  %16 = load i32*, i32** %7, align 8
  %17 = load i64, i64* %6, align 8
  %18 = call i32 @extent_esn_set(i32* %16, i64 %17)
  %19 = load i32*, i32** %7, align 8
  store i32* %19, i32** %3, align 8
  br label %20

20:                                               ; preds = %15, %14
  %21 = load i32*, i32** %3, align 8
  ret i32* %21
}

declare dso_local i32* @base_alloc_impl(i32*, i32*, i32, i32, i64*) #1

declare dso_local i32 @extent_esn_set(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
